fix Post content full width on mobile

--- a/client/src/components/media/Media.module.css
+++ b/client/src/components/media/Media.module.css
@@ -9,6 +9,12 @@
   height: 80vh !important;
 }
 
+@media screen and (max-width: 992px) {
+  .media-size {
+    width: 70vw;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .media-size {
     width: 90vw;
