--- a/client/src/features/Home/Components/Post/PostContent.module.css
+++ b/client/src/features/Home/Components/Post/PostContent.module.css
@@ -2,4 +2,5 @@
   padding-bottom: 15px;
   margin-bottom: 15px;
   border-bottom: 1px solid var(--border-color-base);
+  margin-left: 10px;
 }
