--- a/client/src/features/Home/Home.module.scss
+++ b/client/src/features/Home/Home.module.scss
@@ -2,14 +2,14 @@
   width: 70%;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 992px) {
   .homeContent {
-    width: 100%;
+    width: 90%;
   }
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 768px) {
   .homeContent {
-    width: 80%;
+    width: 100%;
   }
 }
